--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "potelo/nfse-ssa",
-    "description": "Emissão de Nota Fiscal de Serviços Eletrônica (NFS-e) em Salvador-BA",
+    "name": "Helidalto/NFSeGinfes",
+    "description": "Pacote de emissão de nota fiscal de serviço GINFES adaptado de Potello potelo/nfse-ssa",
     "type": "library",
     "require": {
         "robrichards/xmlseclibs": "^3.0"
@@ -8,13 +8,13 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Gabriel Peixoto",
-            "email": "gabriel@potelo.com.br"
+            "name": "Helidalto Gonçalves",
+            "email": "helidalto@gmail.com"
         }
     ],
     "autoload": {
         "psr-4": {
-            "Potelo\\NfseSsa\\": "src/"
+            "Helidalto\\NFSeGinfes\\": "src/"
         },
         "files": [
             "src/helpers.php"
@@ -23,7 +23,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Potelo\\NfseSsa\\NfseSsaServiceProvider"
+                "Helidalto\\NFSeGinfes\\NfseSsaServiceProvider"
             ]
         }
     },
